# Steelworks

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  data_completeness.py  inspection.py  lot.py  production.py  shipping.py
backend/app/repositories/: __init__.py  lot_repo.py  report_repo.py
backend/app/routers/: __init__.py  lots.py  reports.py
backend/app/schemas/: __init__.py  common.py  lot.py  reports.py
backend/tests/: __init__.py  conftest.py  test_lots.py  test_reports.py
db/: sample_queries.sql  schema.sql
docs/: architecture_decision_records.md  tech_stack_decision_records.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CompletenessIndicator.tsx  DateRangeFilter.tsx  IncompleteLotsTable.tsx  InspectionIssuesTable.tsx  LineIssuesTable.tsx  LotSummaryTable.tsx  MissingDataBadge.tsx  Navbar.tsx
frontend/src/pages/: DashboardPage.tsx  LotDetailPage.tsx
frontend/src/types/: index.ts
